extract all possible paths (excluding loops)

--- a/进度记录.md
+++ b/进度记录.md
@@ -16,3 +16,7 @@
 4.8 - 4.10 CompositionSolution类
 - 整理匹配边
 - 提取 *随机单条* 执行路径（待进一步扩展）
+
+4.11 提取执行路径
+- 重构：边单独存放，方便 ExecutionPath 的 clone
+- 实现 cloneable 接口，实现**全部**执行路径的提取（环结构还需要特殊处理）
