post mapping. application/json

--- a/进度记录.md
+++ b/进度记录.md
@@ -37,3 +37,7 @@
 
 4.21 - 4.22 RESTful Service
 - 根据真实 rest API 对 *服务模拟* 进行重构
+
+4.23 调用参数
+- 改为 **@PostMapping** application/json 传参
+- Postman测试效果
