--- a/进度记录.md
+++ b/进度记录.md
@@ -43,3 +43,7 @@
 - Postman测试效果
 
 4.24 支持可选参数
+
+4.25 特殊参数
+- e.g. 开发key
+- 在百度/腾讯地图api上进行测试，可以互相替换调用，但是百度api上体现了一个问题：response的不同content-type需要特殊处理
