--- a/进度记录.md
+++ b/进度记录.md
@@ -47,3 +47,15 @@
 4.25 特殊参数
 - e.g. 开发key
 - 在百度/腾讯地图api上进行测试，可以互相替换调用，但是百度api上体现了一个问题：response的不同content-type需要特殊处理
+
+4.26 - 4.27 服务描述/API平台调研
+- 描述语言：**Swagger API Spec ( OpenAPI 3 )**、RAML、wadl ...
+- API文档管理平台：eolinker ...
+
+4.28 - 5.2 人工收集数据
+- swagger文件编写（可能不一定用得到）
+
+5.3 整理思路，确定改进点
+- 服务聚类，降低搜索空间
+- 动态构建服务图，避免初始的过大开销
+- 最后增加自动调用的管理
