refactor: dynamic graph build path extraction (best QoS, sort by similarity floor) auto execution (async, orchestration)

--- a/进度记录.md
+++ b/进度记录.md
@@ -59,3 +59,16 @@
 - 服务聚类，降低搜索空间
 - 动态构建服务图，避免初始的过大开销
 - 最后增加自动调用的管理
+
+5.4 - 5.12 重构整理
+- controller: 注入单例ServiceRepository，统一初始化模拟服务，分离SimilarityUtils
+- graph代码重构整理: 重构部分方法划分和继承逻辑，完善注释
+- graph.build(...): 动态构建 ServiceGraph
+- QoS: 计算各节点最优 QoS
+
+5.13 - 5.16 执行路径（提取 & Orchestration）
+- 重构路径表示
+- 提取约束
+    - **整体最优 QoS**（Response time）
+    - **匹配相似度下限** 逆序排序
+- 自动执行：CompletableFuture 编排
